fixed middle col alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -131,7 +131,6 @@ input[type="button"]:focus {
 
 table {
     border-collapse: collapse;
-    width: 100%;
     table-layout: fixed;
 }
 
@@ -161,6 +160,7 @@ table .col-three {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 0.8em;
     text-align: right;
+    box-sizing: border-box;
 }
 
 .left, .right {
